boreal/tests/assets/invalid_files/compilation/invalid_identifier_type2.yar
// [error: invalid identifier type]
import "pe"

rule c {
    condition:
        pe.os_version[2] == /aab/
}
